CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(CmakeShellTest)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC)

ADD_EXECUTABLE(HELLO_WORLD ${SRC})

EXECUTE_PROCESS(COMMAND sh ${PROJECT_SOURCE_DIR}/tools/test.sh WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

set(CPACK_PACKAGE_VENDOR ${PROJECT_NAME})

INSTALL(FILES ${PROJECT_SOURCE_DIR}/build/HELLO_WORLD
        DESTINATION lib)

# 设置版本
# set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${PROJECT_DESCRIPTION})
# set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
# set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
# set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})

# # 设置打包类型，这里定义了 tgz 以及 zip 格式
# set(CPACK_GENERATOR "TGZ")
# # set(CPACK_SOURCE_GENERATOR "TGZ;ZIP")

# include(CPack)

INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/third_party/libA DESTINATION install
        PATTERN "*")

INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/third_party/libB DESTINATION install
        PATTERN "*")